# django_with_ollama

./: README.md  db.sqlite3  hello.py  pyproject.toml
core/: settings.py  urls.py
predict/: serializers.py  urls.py  views.py
